--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VITE_API_URL=https://zionstudycentrewebsitebackend.onrender.com/api
+VITE_API_URL=http://localhost:5000/api
 
 http://localhost:5000/api
