--- a/package.json
+++ b/package.json
@@ -61,7 +61,9 @@
     "react-router-dom": "^7.10.1",
     "react-slick": "0.31.0",
     "recharts": "2.15.2",
+    "socket.io-client": "^4.8.3",
     "sonner": "2.0.3",
+    "sweetalert2": "^11.26.17",
     "tailwind-merge": "3.2.0",
     "tw-animate-css": "1.3.8",
     "vaul": "1.1.2"
